# HLK-LD2410-ESP32-C3-ESP32

./: README.md
docs/: CONFIGURATION_GUIDE.md  DEPLOYMENT_MAINTENANCE_GUIDE.md  FUTURE_IMPROVEMENTS.md  TESTING_SCENARIOS.md  WIRING_DIAGRAM.md
master/: CMakeLists.txt
master/main/: CMakeLists.txt  alert_manager.cpp  alert_manager.h  fall_detector.cpp  fall_detector.h  fusion_engine.cpp  fusion_engine.h  main.cpp  network_manager.cpp  network_manager.h  watchdog.cpp  watchdog.h
master_firmware/: CMakeLists.txt
master_firmware/main/: CMakeLists.txt  main.c
master_firmware/test/: CMakeLists.txt  test_alert_manager.c  test_fall_detector.c  test_fusion_engine.c  test_main.c
scripts/: calibration_setup.py
slave/: CMakeLists.txt
slave/main/: CMakeLists.txt  main.cpp  radar_task.cpp  radar_task.h  wifi_task.cpp  wifi_task.h
slave_firmware/: CMakeLists.txt
slave_firmware/main/: CMakeLists.txt  main.c
slave_firmware/test/: CMakeLists.txt  test_main.c  test_mqtt_utils.c  test_radar_utils.c
