# Minimal CMakeLists.txt for test directory of master_firmware
# This file is for structural purposes and would not be compiled in the current sandbox.

# In a real ESP-IDF project with unit testing, you would typically:
# 1. Identify the components to be tested (e.g., the 'main' component of master_firmware).
# 2. Create test source files (like test_fusion_engine.c, test_fall_detector.c).
# 3. Register these test files as part of a test component or directly with a test framework.
#
# Example (conceptual, depends on test framework and IDF version):
#
# # List of test source files for this test component
# set(COMPONENT_SRCS "test_fusion_engine.c" "test_fall_detector.c" "test_alert_manager.c" "test_main.c")
#
# # Include directories for the test component (e.g., if you have common test utilities)
# set(COMPONENT_ADD_INCLUDEDIRS ".")
#
# # Specify that this component requires the 'main' component (the one being tested)
# # This allows access to non-static functions and types from 'main' if they are in headers.
# idf_component_register(SRCS "${COMPONENT_SRCS}"
#                        INCLUDE_DIRS "${COMPONENT_ADD_INCLUDEDIRS}"
#                        REQUIRES main)
#
# # For some test frameworks or older IDF versions, you might add this to a list of test components.
# # list(APPEND TEST_COMPONENTS ${COMPONENT_NAME})

# For this exercise, this file primarily serves as a placeholder to indicate
# where build instructions for the tests would reside. Actual compilation and
# execution of these tests would require a functional ESP-IDF build environment
# and a unit testing framework like Unity (which is part of ESP-IDF).

# A message to indicate this file's purpose (won't be seen in this environment)
message(STATUS "Master Firmware Test CMakeLists.txt: Structural placeholder for unit tests.")
