# Minimal CMakeLists.txt for test directory
# This file is for structural purposes and would not be compiled in the current sandbox.

# In a real ESP-IDF project, you might use something like:
# set(COMPONENT_SRCS "test_radar_utils.c" "test_mqtt_utils.c" "test_main.c")
# set(COMPONENT_ADD_INCLUDEDIRS ".")
#
# # Define this component as a test component
# idf_component_register(SRCS "${COMPONENT_SRCS}"
#                        INCLUDE_DIRS "${COMPONENT_ADD_INCLUDEDIRS}"
#                        REQUIRES main) # Assuming 'main' is the component being tested
#
# # Add this to the list of test components for the project
# list(APPEND TEST_COMPONENTS ${COMPONENT_NAME})

# For now, this file is just a placeholder.
# It indicates that this directory would contain build information for tests.
# Actual testing would require a test framework like Unity (included with ESP-IDF)
# and proper component registration.

# Log a message to indicate this file's purpose (won't be seen in this environment)
message(STATUS "Test CMakeLists.txt: Structural placeholder.")
